# VoiceFlow-PRO

./: IMPLEMENTATION_SUMMARY.md  VOICE_RECOGNITION_AND_AI_TEXT_PROCESSING_ASSESSMENT.md  aiml_api_integration_analysis.md  workspace.json
.github/workflows/: ci.yml  (+1 more)
.memory/: todo_meta.json
ai_text_processor/: IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README.md  __init__.py  cli.py  pytest.ini  setup.py  test_input.txt
data/: wispr_flow_research_summary.json
docs/: INDEX.md  README.md  TESTING_AND_CICD.md  aimlapi_research_summary.md  voiceflow_pro_design_document.md  voiceflow_pro_enhancement_strategy.md  wispr_flow_comprehensive_analysis.md
installation-packages/: MANIFEST.md  README.md
memory/: aiml_api_key_findings.md  voiceflow-pro-technical-assessment.md  voiceflow_pro_ui_ux_accessibility_review.md
scripts/: run_tests.py  setup_testing.sh
shell_output_save/: build:prod_1761239116.txt
voice-recognition-engine/: .eslintrc.json  IMPLEMENTATION_COMPLETE.md  README.md  TECHNICAL.md  jest.config.js  package.json  tsconfig.json  validate.js
voiceflow-pro/: .env.example  .env.template  .eslintrc.cjs  .gitattributes  .gitignore  AI_ML_API_INTEGRATION_COMPLETE.md  DEPLOYMENT.md  FILE_INVENTORY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  LICENSE  README.md  SECURITY_IMPROVEMENTS.md  SECURITY_TASK_COMPLETE.md  SETUP.md  build.sh  package.json  test-integration.sh  test-security.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
voiceflow-pro-ui/: .npmrc  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
voiceflow-pro/src-tauri/: Cargo.toml  tauri.conf.json
voiceflow-pro/src-tauri/icons/: README.md  icon.icns
voiceflow-pro/src-tauri/src/: error_boundary.rs  errors.rs  main.rs  memory.rs  validation.rs
voiceflow-pro/src-tauri/src/integrations/: ai_ml_api.rs  ai_ml_core.rs  ai_text_processor.rs  context_processor.rs  text_enhancement.rs  translation_service.rs  voice_generation.rs  voice_recognition.rs
(+2143 files in other folders)
